styles/blog.scss
@import "global";

body {
  background-color: var(--bg);
  color: var(--fg);
  display: flex;
  flex-direction: column;
}

.blog-content {
  display: flex;
  flex-direction: column;
  padding: 1rem;
  margin: 0 auto;
  flex: 1;

  .title {
    font-size: var(--font-size-xxl);
  }

  .subtitle {
    margin: 0;
    font-size: var(--font-size-md);
    margin-bottom: 32px;
    @media (max-width: $breakpoint-sm) {
      margin-bottom: 8px;
    }
  }

  .post {
    display: flex;
    gap: 2rem;
    flex-direction: row;
    border-bottom: 1px solid var(--lineColor);
    padding-bottom: 8px;
    @media (max-width: $breakpoint-sm) {
      flex-direction: column;
      gap: 0.5rem;
    }
    .left {
      max-width: 300px;
      @media (max-width: $breakpoint-sm) {
        max-width: 100%;
      }
      display: flex;
      align-items: center;
      flex-direction: column;
      img {
        object-fit: cover;
        border-radius: 2px;
      }
      @media (max-width: $breakpoint-sm) {
        img {
          height: 90%;
          aspect-ratio: 4/3;
          max-height: 300px;
        }
      }
    }
    .right {
      flex: 1;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      max-width: 40vw;
      margin-left: 2rem;
      @media (max-width: $breakpoint-sm) {
        max-width: unset;
        margin-left: 0;
      }
      h2 {
        max-width: 50ch;
        font-size: var(--font-size-md);
        text-decoration: underline;
      }
      .snippet {
        max-width: 40ch;
        @media (max-width: $breakpoint-sm) {
          display: none;
        }
      }
      .tags {
        margin-top: 0.5rem;
        display: flex;
        gap: 4px;
        flex-wrap: wrap;
      }
      .date {
        color: #666666;
        font-size: var(--font-size-xs);
      }
    }
    .tag {
      border: 1px solid wheat;
      padding: 4px;
      border-radius: 2px;
      background-color: brown;
      color: wheat;
      font-size: var(--font-size-xs);
    }
    .tag:nth-child(2n) {
      background-color: darkslateblue;
      color: wheat;
    }
  }

  @media (max-width: $breakpoint-md) {
  }

  @media (max-width: $breakpoint-sm) {
  }
}

body.dark {
  .post {
  }
}

